updated current translation files

--- a/olca-app/html/start_page_de.html
+++ b/olca-app/html/start_page_de.html
@@ -3,7 +3,7 @@
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="content-type">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-    <title>欢迎到 openLCA</title>
+    <title>Willkommen bei openLCA</title>
     <link href="../libs/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <style type="text/css">
         body {
@@ -130,20 +130,20 @@
 	          <tr>
 	            <td id="logo-cell">
 	                <img id="logo" src="../images/logo.png" onclick="callOpenUrl('http://www.openlca.org')" />
-	                <h1>欢迎到 openLCA!</h1>
+	                <h1>Willkommen bei openLCA!</h1>
 	                <span class="subtitle">{{data.version}}</span>
 	            </td>
 	          </tr>
 	          <tr>
 	            <td>
-	              <p class="description">高性能生命周期评价和可持续性评价软件. 真的是开源.</p>
-	              <p class="description">可用免费. 自从 2006, 由 GreenDelta 创造的和维护的. <a onclick="callOpenUrl('http://www.greendelta.com')" class="subtle-link" target="blank" class="btn btn-default">www.greendelta.com</a></p>
+	              <p class="description">Open-Source-Hochleistungssoftware für Lebenszyklusanalysen und Nachhaltigkeitsbewertungen.</p>
+	              <p class="description">Frei verfügbar seit 2006. Erstellt und gewartet von GreenDelta, Berlin. <a onclick="callOpenUrl('http://www.greendelta.com')" class="subtle-link" target="blank" class="btn btn-default">www.greendelta.com</a></p>
 	            </td>
 	          </tr>
 	          <tr>
 	            <td>
 	              <div id="gd-logo"></div>
-	              <p class="description">许可证: Mozilla Public License (<a onclick="callOpenUrl('www.openlca.org/open-source')" target="blank" class="btn btn-default">是什么意思吗?</a>).</p></td>                  
+	              <p class="description">Lizenziert unter der Mozilla Public License (<a onclick="callOpenUrl('http://www.openlca.org/open-source')" target="blank" class="btn btn-default">Was bedeuted das?</a>).</p></td>                  
 	            </td>
 	          </tr>
 	        </tbody>
@@ -155,55 +155,60 @@
 	          <tr>
 	            <td>
 	              <h3><img src="../images/news.gif"
-	                  alt="">有什么新鲜事</h3>
-	              <p>为版本 1.4, 完全重新设计:</p>
+	                  alt="">Was ist neu?</h3>
+	              <p>Für die Version 1.4 haben wir openLCA komplett überarbeitet und verbessert. Einige der Verbesserungen sind:</p>
 	              <ul>
-	                <li><b>彻底地</b> <a onclick="callOpenUrl('http://www.openlca.org/performance')" class="btn btn-default"><b>改良性能</b></a> 约 400%</li>
-	                <li><b>许多</b> <a onclick="callOpenUrl('http://www.openlca.org/features#usability')" class="btn btn-default"><b>可用性改进</b></a></li>
-	                <li><b>许多</b> <a onclick="callOpenUrl('http://www.openlca.org/features#overview1.4')"  class="btn btn-default"><b>新特点</b></a></li>
+	                <li><b>drastisch</b> <a onclick="callOpenUrl('http://www.openlca.org/performance')" class="btn btn-default"><b>höhere Leistung</b></a>, um ungefähr 400%</li>
+	                <li><b>bedeutend</b> <a onclick="callOpenUrl('http://www.openlca.org/features#usability')" class="btn btn-default"><b>bessere Benutzbarkeit</b></a></li>
+	                <li><b>viele</b> <a onclick="callOpenUrl('http://www.openlca.org/features#overview1.4')"  class="btn btn-default"><b>neue Funktionen</b></a></li>
 	              </ul>
 	            </td>
 	            <td>
 	              <h3><img src="../images/getting-started.gif"
-	                  alt="">入门指南</h3>
-	              <p>当第一次启动 openLCA, 没有数据. 在新版本, 是真的很容易就可以开始. 你可以简单地从现存的数据库输入 zolca 文件, 然后打开从导航</p>
-	              <p>这是一段 <a onclick="callOpenUrl('http://www.openlca.org/videos')"
-	                  target="blank" class="btn btn-default">视频</a> 中解释</p>
+	                  alt="">Kurzanleitung für Erstbenutzer</h3>
+	              <p>Wenn Sie openLCA zum ersten mal starten, sind noch keine Daten vorhanden.
+					Mit der neuen Version von openLCA ist es ab sofort besonders einfach, existierende Datenbanken aus zolca-Dateien zu importieren.
+					Die importierten Datenbaken lassen sich von der Navigation aus direkt durch einen Doppelklick öffnen.</p>
+	              <p>Das ist in einem <a onclick="callOpenUrl('http://www.openlca.org/videos')"
+	                  target="blank" class="btn btn-default">Video</a> erklärt.</p>
 	            </td>
 	          </tr>
 	          <tr>
 	            <td>
 	              <h3><img style="width: 61px; height: 54px;" src="../images/search.gif"
-	                  alt="">搜索和下载数据</h3>
-	              <p>许多数据库是可用的在 <a onclick="callOpenUrl('http://nexus.openlca.org')" target="blank"
-	                  class="btn btn-default">openLCA Nexus</a>,
-	                那里你可以搜索的完整数据库，单个数据集 和 下载他们入 openLCA. 数据库均适合 openLCA, 而且可以结合几个数据库.</p>
-	              <p>这也是一段 <a onclick="callOpenUrl('http://www.openlca.org/videos')"
-	                  target="blank" class="btn btn-default">视频</a> 中解释<br>
-	                生命周期影响评价方法包可以从 <a onclick="callOpenUrl('http://www.openlca.org/downloads')"
-	                  target="blank" class="btn btn-default">openLCA 下载网站</a> 下载</p>
+	                  alt="">Daten suchen und herunterladen</h3>
+	              <p>Eine Vielzahl an LCA Datenbanken ist im <a onclick="callOpenUrl('http://nexus.openlca.org')" target="blank"
+	                  class="btn btn-default">openLCA Nexus</a> vorhanden.
+	                  Dort können Sie nach einzelnen Datensätzen und kompletten Datenbanken suchen.
+	                  Alle hinterlegten Datenbanken sind mit openLCA kompatibel und können heruntergeladen geladen werden.
+	                  Einzelne Datenbanken können zudem miteinander kombiniert werden.</p>
+	              <p>Wie Sie die Datenbanken herunterladen und mehr, ist in einem <a onclick="callOpenUrl('http://www.openlca.org/videos')"
+	                  target="blank" class="btn btn-default">Video</a> beschrieben.<br>
+	                LCIA-Methodenpakete erhalten Sie online in der <a onclick="callOpenUrl('http://www.openlca.org/downloads')"
+	                  target="blank" class="btn btn-default">Download-Rubrik</a></p>
 	            </td>
 	            <td>
 	              <h3><img src="../images/documentation.gif"
-	                  alt="">用户手册</h3>
-	              <p>在线 wiki 为 openLCA 提供细节信息. 随着时间改变所以请检查偶尔地.</p>
-	              <p>新的介绍性和全面的 <a onclick="callOpenUrl('http://www.openlca.org/manuals')" target="blank"
-	                  class="btn btn-default">手册</a> 网上也有.</p>
+	                  alt="">Hilfe und Anleitungen</h3>
+	              <p>Das Online-Wiki für openLCA enthält Details zu den meisten Funktionen von openLCA. Das Wiki wird für Sie überarbeitet und aktualisiert, so dass sich ein Besuch immer lohnt, wenn Sie auf der Suche nach aktuellsten Informationen und Beispielen sind.</p>
+	              <p>Neue Beispiele und Informationen zur Benutzung von openLCA finden Sie in unseren <a onclick="callOpenUrl('http://www.openlca.org/manuals')" target="blank"
+	                  class="btn btn-default">Nutzeranleitungen</a> die online frei zugänglich für Sie bereitgestellt werden.</p>
 	            </td>
 	          </tr>
 	          <tr>
 	            <td>
 	              <h3><img src="../images/examples.gif"
-	                  alt="">例子</h3>
-	              <p>这里有范例分析，说明了如何使用 openLCA:</p>
-	              <p><a onclick="callOpenUrl('http://www.openlca.org/case_studies#1_3')" target="blank" class="btn btn-default">版本1.3的范例分析</a></p>
-	              <p><a onclick="callOpenUrl('http://www.openlca.org/case_studies#1_4')" target="blank" class="btn btn-default">版本1.4的范例分析</a></p>
+	                  alt="">Beispiele</h3>
+	              <p>Hier finden Sie einige Fallstudien für openLCA:</p>
+	              <p><a onclick="callOpenUrl('http://www.openlca.org/case_studies#1_3')" target="blank" class="btn btn-default">Fallstudien für Version 1.3</a></p>
+	              <p><a onclick="callOpenUrl('http://www.openlca.org/case_studies#1_4')" target="blank" class="btn btn-default">Fallstudien für Version 1.4</a></p>
 	            </td>
 	            <td>
 	              <h3><img src="../images/community.gif"
-	                  alt="">公众</h3>
-	              <p>越来越多的人正在使用 openLCA. 在 <a
-	                  onclick="callOpenUrl('http://www.openlca.org/forum')" target="blank" class="btn btn-default">论坛</a> 中注册上分享想法，问问题, 阅读答案并参与.</p>
+	                  alt="">Nutzergemeinschaft</h3>
+	              <p>openLCA erfreut sich über eine stetig wachsende Zahl an Nutzern. Registrieren auch Sie sich in unserem <a
+	                  onclick="callOpenUrl('http://www.openlca.org/forum')" target="blank" class="btn btn-default">Forum</a>, um von den Vorteilen zu profitieren.
+	                  Teilen Sie Ihre Meinungen, stellen Sie Fragen, lesen Sie Antworten und tragen Sie dazu bei, openLCA noch besser zu gestalten.</p>
 	            </td>
 	          </tr>
 		        </tbody>
