removed variants table from report editor; added description field for variants

--- a/olca-app/html/report_view.html
+++ b/olca-app/html/report_view.html
@@ -169,7 +169,7 @@
 				<tbody>
 				<tr data-ng-repeat="variant in report.variants">
 					<td>
-						{{variant.userFriendlyName}}
+						{{variant.name}}
 					</td>
 					<td>
 						{{variant.description}}
