Fixed getValue (kml) in KML editor html

--- a/olca-app/html/kml_editor.html
+++ b/olca-app/html/kml_editor.html
@@ -108,7 +108,7 @@
                     textEditor.setValue(prettifyKML(getKML()));
                 } else if (id == "#mapDiv") {
                     onDestroyFeatures()
-                    setKML($("#textDiv textarea").val())               
+                    setKML(textEditor.getValue())               
                 }
             }
 
